Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 33f8c7f00ad300bfe421248fe3c89fc896c51349, reversing
changes made to 424be70ecc978566be62a207607457da3d05d6ed.

--- a/ionic.project
+++ b/ionic.project
@@ -1,3 +1,12 @@
 {
   "name": "architry",
+  "app_id": "",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
